--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.acterics.sandbox">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,18 +21,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".webstore.MainWebStoreActivity"
+            android:name=".webstore.ActivityMainWebStore"
             android:theme="@style/WebStoreTheme" />
         <activity
-            android:name=".webstore.database.StoreDatabaseActivity"
-            android:theme="@style/WebStoreTheme"/>
+            android:name=".webstore.database.ActivityStoreDatabase"
+            android:theme="@style/WebStoreTheme" />
         <activity
-            android:name=".webstore.database.EntryInputActivity"
-            android:theme="@style/EntryInputTheme">
-
-
-
-        </activity>
+            android:name=".webstore.database.DialogEntryInput"
+            android:theme="@style/EntryInputTheme"></activity>
+        <activity android:name=".chat.ActivityMainChat"></activity>
     </application>
 
 </manifest>
